# sighook

./: .gitignore  AGENT.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: README.md
examples/inline_hook_far/: README.md  main.rs  target.c
examples/inline_hook_fpregs/: .gitignore  README.md  main.rs  target.c
examples/inline_hook_signal/: README.md  app  main.rs
examples/instrument_adrp_no_original/: README.md  main.rs  target.c
examples/instrument_b_cond_nv/: README.md  main.rs  target.c
examples/instrument_blr_lr/: README.md  main.rs  target.c
examples/instrument_literal_fault_pc/: README.md  main.rs  target.c
examples/instrument_no_original/: README.md  main.rs  target.c
examples/instrument_nop_x16/: README.md  main.rs  target.c
examples/instrument_unhook_restore/: README.md  main.rs  target.c
examples/instrument_with_original/: README.md  main.rs  target.c
examples/patch_asm_add_to_mul/: README.md  main.rs
examples/patch_race_stress/: README.md  main.rs  target.c
examples/patchcode_add_to_mul/: README.md  main.rs  target.c
examples/prepatched_upgrade_execute_original/: README.md  main.rs  target.c
src/: asm.rs  constants.rs  context.rs  error.rs  lib.rs  memory.rs  patch_sync.rs  replay.rs  signal.rs  state.rs  trampoline.rs
src/patch/sync/: linux.rs
src/signal/: active.rs  chain.rs  install.rs  mod.rs  previous.rs
src/signal/handlers/: aarch64.rs  mod.rs  x86_64.rs
src/state/: inline_patch.rs  instrument.rs  mod.rs  original_opcode.rs  util.rs
src/trampoline/: aarch64.rs  mod.rs  x86_64.rs
