[package]
name = "sighook"
version = "0.2.2"
edition = "2024"
rust-version = "1.85"
authors = ["YinMo19 <me@yinmo19.top>"]
description = "A macOS (aarch64) runtime instrumentation and inline hooking crate."
readme = "README.md"
license = "GPL-2.0-only"
repository = "https://github.com/YinMo19"
homepage = "https://blog.yinmo19.top"
documentation = "https://docs.rs/sighook"
keywords = ["macos", "aarch64", "hook", "instrumentation", "signal"]

[package.metadata.docs.rs]
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin"]
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "sighook"
crate-type = ["rlib", "cdylib"]

[[example]]
name = "patchcode_add_to_mul"
path = "examples/patchcode_add_to_mul/main.rs"
crate-type = ["cdylib"]

[[example]]
name = "instrument_with_original"
path = "examples/instrument_with_original/main.rs"
crate-type = ["cdylib"]

[[example]]
name = "instrument_no_original"
path = "examples/instrument_no_original/main.rs"
crate-type = ["cdylib"]

[[example]]
name = "inline_hook_far"
path = "examples/inline_hook_far/main.rs"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
